--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,22 @@ repositories {
 }
 
 dependencies {
+    compile 'mysql:mysql-connector-java'
+    compileOnly 'org.projectlombok:lombok:1.18.8'
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
+
+    //compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
+
+    compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.5'
+
+    //compile('org.springframework.security:spring-security-jwt')
+    //compile('org.springframework.boot:spring-boot-starter-security')
+    //compile("org.springframework.security.oauth:spring-security-oauth2")
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    //testImplementation 'org.springframework.security:spring-security-test'
 }
