--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+database.url=jdbc:mysql://localhost:3306/virtual_teacher
+database.username=root
+database.password=root
+spring.jpa.open-in-view =true
