--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-database.url=jdbc:mysql://localhost:3306/virtual_teacher
-database.username=root
-database.password=root
 spring.jpa.open-in-view =true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+spring.datasource.url=jdbc:mysql://localhost:3306/virtual_teacher
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
