--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,9 @@ dependencies {
     compile group: 'org.modelmapper', name: 'modelmapper', version: '0.7.5'
 
 
-    compile('org.springframework.security:spring-security-jwt')
+//    compile('org.springframework.security:spring-security-jwt')
     compile('org.springframework.boot:spring-boot-starter-security')
-    compile("org.springframework.security.oauth:spring-security-oauth2")
+//    compile("org.springframework.security.oauth:spring-security-oauth2")
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
