--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.datasource.url=jdbc:mysql://remotemysql.com:3306/ZxBZRpHwP5
 spring.datasource.username=ZxBZRpHwP5
-spring.datasource.password=FvmnmrY05e
+spring.datasource.password=XzgkO3hfXQ
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #multipart max size
