--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,9 @@ spring.jpa.open-in-view =true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/virtual_teacher
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.datasource.url=jdbc:mysql://remotemysql.com:3306/ZxBZRpHwP5
-spring.datasource.username=ZxBZRpHwP5
-spring.datasource.password=XzgkO3hfXQ
+spring.datasource.url=jdbc:mysql://localhost:3306/virtual_teacher
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #multipart max size
